# CMake_QML

./: Clean.bat
CMake_QML_01_Rectangle/Rectangle_01_bordered_color_radius/: main.qml
CMake_QML_02_Text/Text_01_font/: main.qml
CMake_QML_04_MouseArea/: main.qml
CMake_QML_05_Components_Button/: button.qml  main.qml
CMake_QML_06_TextInput/: main.qml
CMake_QML_08_TabView/: main.qml
CMake_QML_09_GroupBox/: main.qml
CMake_QML_10_Item/: main.qml
CMake_QML_11_Z order/: main.qml
CMake_QML_12_Menu/Menu01_apply for ver 1.4/: main.qml
CMake_QML_12_Menu/Menu02_header/: main.qml
CMake_QML_13_Header_Footer/: main.qml
CMake_QML_14_ToolBar/: main.qml
CMake_QML_15_HTML5/: main.qml
CMake_QML_16_ChartView/: main.qml
CMake_QML_17_Layout/01_ColumnLayout/: 版本特性.txt
CMake_QML_17_Layout/01_ColumnLayout/src/: CMakeLists.txt  main.cpp  main.qml
CMake_QML_17_Layout/02_Anchors Layout/src/: main.cpp  main.qml  main.qrc
CMake_QML_18_Import Directory/01_static import/Components/: DialogBox.qml
CMake_QML_18_Import Directory/01_static import/main/: main.qml
CMake_QML_18_Import Directory/02_Components import/Components/: Dialog.qml  auth.qml
CMake_QML_18_Import Directory/02_Components import/main/: main.qml
CMake_QML_18_Import Directory/03_QtCreator createComponent/build-src-Desktop_Qt_5_10_1_MSVC2013_64bit-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  testSln.cbp
CMake_QML_18_Import Directory/03_QtCreator createComponent/build-src-Desktop_Qt_5_10_1_MSVC2013_64bit-Default/helloworld_autogen/EWIEGA46WW/: qrc_main.cpp
CMake_QML_18_Import Directory/03_QtCreator createComponent/build-src-Desktop_Qt_5_10_1_MSVC2015_64bit-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  testSln.cbp
CMake_QML_18_Import Directory/03_QtCreator createComponent/build-src-Desktop_Qt_5_10_1_MSVC2015_64bit-Default/helloworld_autogen/EWIEGA46WW/: qrc_main.cpp
CMake_QML_18_Import Directory/03_QtCreator createComponent/src/: CMakeLists.txt  main.cpp  main.qml  main.qrc
CMake_QML_18_Import Directory/04_VisualStudio createComponent/: 版本特性.txt
CMake_QML_18_Import Directory/04_VisualStudio createComponent/src/: CMakeLists.txt  main.cpp  main.qml  main.qrc
CMake_QML_19_popup/: main.qml
CMake_QML_20_Dialog/: main.qml
CMake_QML_21_FilePath/src/: CMakeLists.txt  main.cpp  main.qml
CMake_QML_21_FilePath/src/Printer/: Dialog.qml
CMake_QML_22_Glow/: main.qml
CMake_QML_23_NumberAnimation/: main.qml
